--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="color_primary">#F1C21B</color>
+    <color name="color_primary_dark">#ba9200</color>
+    <color name="color_primary_light">#fff458</color>
+
+    <color name="color_secondary">#1CA6B9</color>
+
+    <color name="background">#F8F7F8</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00000000</color>
+
+    <color name="ripple_dark">#11000000</color>
+
+    <color name="input">#E8E8E8</color>
+
+    <color name="error">#E82E2E</color>
+
+    <color name="done_darker">#A4DD98</color>
+    <color name="done_lighter">#D4FFCB</color>
+
+    <color name="gray">#404040</color>
+    <color name="gray_dark">#292929</color>
+    <color name="gray_light">#707070</color>
+
+    <color name="separator">#CFCFCF</color>
+
+    <color name="color_hint">#A0A0a0</color>
+
 </resources>
