--- a/app/src/main/res/drawable/img_menu_building.xml
+++ b/app/src/main/res/drawable/img_menu_building.xml
@@ -5,22 +5,22 @@
     android:viewportWidth="92"
     android:viewportHeight="94">
   <path
-      android:pathData="M81.1,53.3c0.9,0.5 0.9,1.3 0,1.7L47.7,73c-0.9,0.5 -2.4,0.5 -3.3,0L10.9,55c-0.9,-0.5 -0.9,-1.3 0,-1.7l33.4,-18c0.9,-0.5 2.4,-0.5 3.3,0L81.1,53.3z"
+      android:pathData="M87.1,53.7c1.1,0.6 1.1,1.5 0,2L48,76.8c-1.1,0.6 -2.8,0.6 -3.9,0L4.9,55.7c-1.1,-0.6 -1.1,-1.5 0,-2L44,32.7c1.1,-0.6 2.8,-0.6 3.9,0L87.1,53.7z"
       android:fillColor="#8AB534"/>
   <path
-      android:pathData="M10.9,55c-0.4,-0.2 -0.7,-0.6 -0.7,-0.9l0,0c0,0 0,1.2 0,1.6c0,0.3 0.2,0.6 0.7,0.9L44,74.3v-1.6L10.9,55z"
+      android:pathData="M4.9,55.7c-0.5,-0.2 -0.8,-0.7 -0.8,-1.1l0,0c0,0 0,1.4 0,1.9c0,0.4 0.2,0.7 0.8,1.1l38.7,20.7v-1.9L4.9,55.7z"
       android:fillColor="#A3CF74"/>
   <path
-      android:pathData="M81.8,54.2c0,0.3 -0.2,0.6 -0.7,0.8L48,72.9v1.6l33.1,-17.9c0.4,-0.2 0.7,-0.6 0.7,-0.9C81.8,55.4 81.8,54.4 81.8,54.2z"
+      android:pathData="M87.9,54.7c0,0.4 -0.2,0.7 -0.8,0.9L48.3,76.6v1.9l38.7,-20.9c0.5,-0.2 0.8,-0.7 0.8,-1.1C87.9,56.1 87.9,55 87.9,54.7z"
       android:fillColor="#599E1C"/>
   <path
-      android:pathData="M47.7,73c-0.9,0.5 -2.4,0.5 -3.3,0L44,72.8v1.6l0.5,0.3c0.9,0.5 2.4,0.5 3.3,0l0.3,-0.1v-1.6L47.7,73z">
+      android:pathData="M48.3,76.6c-1.1,0.6 -3.2,0.7 -4.2,0.1l-0.5,-0.2v1.9l0.6,0.4c1.1,0.6 3,0.4 4.1,-0.2V76.6z">
     <aapt:attr name="android:fillColor">
       <gradient 
-          android:startY="73.8475"
-          android:startX="44"
-          android:endY="73.8475"
-          android:endX="48"
+          android:startY="77.7253"
+          android:startX="43.6599"
+          android:endY="77.7253"
+          android:endX="48.226"
           android:type="linear">
         <item android:offset="0" android:color="#FFA3CF74"/>
         <item android:offset="1" android:color="#FF599E1C"/>
@@ -28,102 +28,102 @@
     </aapt:attr>
   </path>
   <path
-      android:pathData="M46,64.2l10.8,-1.2l20.7,-11.7l-17.8,-9.6z"
+      android:pathData="M46,68.8l11.8,-1.4l27.2,-14.7l-23,-12.5z"
       android:strokeAlpha="0.42"
       android:fillColor="#757575"
       android:fillAlpha="0.42"/>
   <path
-      android:pathData="M46,58l-19.2,-10l15.4,-10.1l21.5,10.9z"
+      android:pathData="M46.1,60.8l-24.8,-12.9l19.9,-13l27.7,14z"
       android:fillColor="#D0D1D6"/>
   <path
-      android:pathData="M63.8,55.1l-17.8,9.1l0,-6.2l17.7,-9.2z"
+      android:pathData="M69.1,57l-23,11.8l0,-8l22.8,-11.9z"
       android:fillColor="#BF7D2A"/>
   <path
-      android:pathData="M46,64.2l-19.1,-10l-0.1,-6.2l19.2,10z"
+      android:pathData="M46.1,68.8l-24.7,-12.9l-0.1,-8l24.8,12.9z"
       android:fillColor="#F2B979"/>
   <path
-      android:pathData="M40,60.3l-4.2,-2.1l0,-5l4.2,2.2z"
+      android:pathData="M38.3,63.8l-5.4,-2.8l0,-6.4l5.4,2.8z"
       android:fillColor="#FDFDFD"/>
   <path
-      android:pathData="M35.6,58.1l-4.3,-2.2l0,-5l4.2,2.2z"
+      android:pathData="M32.7,60.9l-5.6,-2.8l0,-6.5l5.4,2.9z"
       android:fillColor="#FDFDFD"/>
   <path
-      android:pathData="M45.9,51.7l-19.1,-9.9l15.3,-10.2l21.6,11z"
+      android:pathData="M46,52.7l-24.7,-12.8l19.8,-13.2l27.8,14.2z"
       android:fillColor="#D0D1D6"/>
   <path
-      android:pathData="M63.7,48.8l-17.7,9.2l-0.1,-6.3l17.8,-9.1z"
+      android:pathData="M68.9,48.9l-22.8,11.9l-0.1,-8.1l22.9,-11.8z"
       android:fillColor="#BF7D2A"/>
   <path
-      android:pathData="M46,58l-19.2,-10l0,-6.2l19.1,9.9z"
+      android:pathData="M46.1,60.8l-24.8,-12.9l0,-8l24.7,12.8z"
       android:fillColor="#F2B979"/>
   <path
-      android:pathData="M40,54.2l-4.2,-2.1l0,-5l4.1,2.2z"
+      android:pathData="M38.3,55.9l-5.4,-2.7l0,-6.5l5.3,2.9z"
       android:fillColor="#FDFDFD"/>
   <path
-      android:pathData="M35.5,51.9l-4.2,-2.1l0,-5l4.2,2.2z"
+      android:pathData="M32.5,52.9l-5.4,-2.7l0,-6.4l5.4,2.8z"
       android:fillColor="#FDFDFD"/>
   <path
-      android:pathData="M45.9,45.5l-19.2,-10l17.4,-9.5l19.5,10.4z"
+      android:pathData="M46,44.7l-24.8,-12.9l22.4,-12.3l25.2,13.4z"
       android:fillColor="#D0D1D6"/>
   <path
-      android:pathData="M45.8,43.7l-15.6,-8.1l14.1,-7.7l15.8,8.4z"
+      android:pathData="M45.8,42.3l-20.1,-10.4l18.2,-10l20.4,10.9z"
       android:fillColor="#FFFFFF"/>
   <path
-      android:pathData="M63.7,42.6l-17.8,9.2l0,-6.3l17.7,-9.1z"
+      android:pathData="M68.9,40.9l-22.9,11.9l0,-8.1l22.8,-11.8z"
       android:fillColor="#BF7D2A"/>
   <path
-      android:pathData="M45.9,51.8l-19.1,-10l-0.1,-6.3l19.2,10z"
+      android:pathData="M46,52.8l-24.7,-12.9l-0.1,-8.1l24.8,12.9z"
       android:fillColor="#F2B979"/>
   <path
-      android:pathData="M40.1,48l-4.2,-2.1l0,-5l4.2,2.2z"
+      android:pathData="M38.5,47.9l-5.4,-2.7l0,-6.5l5.4,2.9z"
       android:fillColor="#FDFDFD"/>
   <path
-      android:pathData="M35.6,45.7l-4.2,-2.1l0,-5l4.2,2.2z"
+      android:pathData="M32.7,44.9l-5.4,-2.7l0,-6.4l5.4,2.8z"
       android:fillColor="#FDFDFD"/>
   <path
-      android:pathData="M51,48.5l4,-2.2l0,-4.6l-4.1,2.1z"
+      android:pathData="M52.5,48.5l5.2,-2.8l0,-5.9l-5.3,2.7z"
       android:fillColor="#E6E7E8"/>
   <path
-      android:pathData="M55.4,46.2l4.1,-2.1l0,-4.7l-4.1,2.2z"
+      android:pathData="M58.2,45.6l5.3,-2.7l0,-6.1l-5.3,2.8z"
       android:fillColor="#E6E7E8"/>
   <path
-      android:pathData="M51,54.5l4.1,-2.1l-0.1,-4.6l-4,2.1z"
+      android:pathData="M52.5,56.3l5.3,-2.7l-0.1,-6l-5.2,2.7z"
       android:fillColor="#E6E7E8"/>
   <path
-      android:pathData="M55.3,52.3l4.1,-2.1l-0.1,-4.7l-4,2.1z"
+      android:pathData="M58.1,53.4l5.3,-2.7l-0.1,-6l-5.2,2.7z"
       android:fillColor="#E6E7E8"/>
   <path
-      android:pathData="M51,60.6l4.1,-2.1l0,-4.7l-4.1,2.1z"
+      android:pathData="M52.5,64.1l5.3,-2.7l0,-6l-5.3,2.7z"
       android:fillColor="#E6E7E8"/>
   <path
-      android:pathData="M55.4,58.3l4,-2.1l0,-4.7l-4.1,2.2z"
+      android:pathData="M58.2,61.2l5.2,-2.7l0,-6.1l-5.3,2.8z"
       android:fillColor="#E6E7E8"/>
   <path
-      android:pathData="M43.2,39.6l3.5,-0.4l7.1,-3.7l-6.1,-3.2z"
+      android:pathData="M42.5,37l4.5,-0.5l9.2,-4.7l-7.9,-4.2z"
       android:strokeAlpha="0.3"
       android:fillColor="#757575"
       android:fillAlpha="0.3"/>
   <path
-      android:pathData="M43.1,38.3l-5,-2.5l8.6,-4.7l5.1,2.6z"
+      android:pathData="M42.3,35.4l-6.4,-3.3l11.1,-6l6.6,3.3z"
       android:fillColor="#E6E7E8"/>
   <path
-      android:pathData="M51.8,35l-8.7,4.7l0,-1.4l8.7,-4.6z"
+      android:pathData="M53.6,31.1l-11.3,6.1l0,-1.8l11.3,-6z"
       android:fillColor="#E5850C"/>
   <path
-      android:pathData="M43.1,39.7l-5,-2.6l0,-1.3l5,2.5z"
+      android:pathData="M42.3,37.2l-6.4,-3.4l0,-1.7l6.4,3.3z"
       android:fillColor="#F9B256"/>
   <path
-      android:pathData="M42.7,37.4l1.5,-0.2l0.9,-0.5l-2.5,-1.3z"
+      android:pathData="M41.8,34.2l2.2,-0.1l1.1,-0.7l-3.4,-1.8z"
       android:strokeAlpha="0.3"
       android:fillColor="#757575"
       android:fillAlpha="0.3"/>
   <path
-      android:pathData="M42.7,35.9l0.9,-0.5l-2.4,-1.2l-1,0.5z"
+      android:pathData="M42,32.4l1.2,-0.6l-3.1,-1.6l-1.3,0.7z"
       android:fillColor="#FFFFFF"/>
   <path
-      android:pathData="M40.2,34.7l2.5,1.2l0,1.5l-2.5,-1.2z"
+      android:pathData="M38.8,30.9l3.2,1.5l0,1.9l-3.2,-1.5z"
       android:fillColor="#F9B256"/>
   <path
-      android:pathData="M42.7,37.4l1,-0.5l-0.1,-1.5l-0.9,0.5z"
+      android:pathData="M42,34.3l1.3,-0.6l-0.1,-1.9l-1.2,0.6z"
       android:fillColor="#E5850C"/>
 </vector>
