Implement buildings screen

--- a/app/src/main/res/layout/view_holder_add_item.xml
+++ b/app/src/main/res/layout/view_holder_add_item.xml
@@ -6,9 +6,11 @@
     style="@style/Text.Header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bg_ripple"
+    android:background="@drawable/bg_add_item"
     android:paddingTop="42dp"
     android:paddingBottom="42dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     android:gravity="center_horizontal"
     android:textStyle="bold"
     app:drawableTopCompat="@drawable/ic_add_item"
