--- a/app/src/main/res/drawable/bg_add_item.xml
+++ b/app/src/main/res/drawable/bg_add_item.xml
@@ -11,7 +11,7 @@
         <shape android:shape="rectangle">
 
             <corners android:radius="8dp" />
-            <solid android:color="#dddddd" />
+            <solid android:color="#eaeaea" />
             <stroke
                 android:width="2dp"
                 android:dashWidth="8dp"
