--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,13 +27,12 @@
         android:text="@string/app_name" />
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/InputLayout"
+        style="@style/InputLayout.Filled"
         android:id="@+id/layoutInputLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        app:hintEnabled="true"
         android:hint="@string/title_login"
         app:errorEnabled="true"
         android:layout_marginTop="64dp">
@@ -50,14 +49,13 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/InputLayout"
+        style="@style/InputLayout.Filled"
         android:id="@+id/layoutInputPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        app:hintEnabled="true"
         android:hint="@string/title_password"
         app:errorEnabled="true">
 
