--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="ripple_dark">#11000000</color>
 
     <color name="input">#E8E8E8</color>
+    <color name="input_disabled">#F2F2F2</color>
 
     <color name="error">#E82E2E</color>
 
