--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,25 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_main" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_gravity="top"
+        android:src="@drawable/ic_screen_line"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_gravity="bottom"
+        android:rotation="180"
+        android:src="@drawable/ic_screen_line"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY" />
+
 </FrameLayout>
