--- a/app/src/main/res/navigation/nav_buildings.xml
+++ b/app/src/main/res/navigation/nav_buildings.xml
@@ -5,6 +5,8 @@
     android:id="@+id/nav_buildings"
     app:startDestination="@id/screen_buildings_list">
 
+    <include app:graph="@navigation/nav_rooms" />
+
     <fragment
         android:id="@+id/screen_buildings_list"
         android:label="@string/title_buildings"
@@ -13,6 +15,15 @@
 
         <action android:id="@+id/action_buildings_list_to_modify_building"
             app:destination="@id/screen_modify_building" />
+
+        <action android:id="@+id/action_buildings_to_rooms"
+            app:destination="@id/nav_rooms">
+
+            <argument
+                android:name="building_id"
+                app:argType="string" />
+
+        </action>
 
     </fragment>
 
