--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,10 +19,8 @@
     <color name="input">#E8E8E8</color>
     <color name="input_disabled">#F2F2F2</color>
 
+    <color name="success">#2ECC35</color>
     <color name="error">#E82E2E</color>
-
-    <color name="done_darker">#A4DD98</color>
-    <color name="done_lighter">#D4FFCB</color>
 
     <color name="gray">#404040</color>
     <color name="gray_dark">#292929</color>
