--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -149,6 +149,17 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="Button.Outline">
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingStart">4dp</item>
+        <item name="android:paddingEnd">4dp</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:outlineProvider">none</item>
+    </style>
+
     <!-- Menu -->
 
     <style name="MenuItemLayoutRow">
