--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,5 +9,6 @@
 
     <dimen name="room_type_button_corners">8dp</dimen>
     <dimen name="room_type_button_stroke_width">2dp</dimen>
+    <dimen name="toolbar_height">56dp</dimen>
 
 </resources>
