--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,6 +7,8 @@
 
     <include app:graph="@navigation/nav_buildings" />
 
+    <include app:graph="@navigation/nav_managers" />
+
     <fragment
         android:id="@+id/screen_menu"
         android:label="@string/title_menu"
@@ -15,6 +17,9 @@
 
         <action android:id="@+id/action_menu_to_buildings"
             app:destination="@id/nav_buildings" />
+
+        <action android:id="@+id/action_menu_to_managers"
+            app:destination="@id/nav_managers" />
 
     </fragment>
 
