--- a/app/src/main/res/layout/fragment_room_modify.xml
+++ b/app/src/main/res/layout/fragment_room_modify.xml
@@ -34,6 +34,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textCapWords"
+                android:imeOptions="actionNext"
+                android:nextFocusDown="@id/inputDescription"
                 tools:text="Room name" />
 
         </com.google.android.material.textfield.TextInputLayout>
