Disable modify room inputs when loading, fix disabled state for amount picker

--- a/app/src/main/res/drawable/bg_amount_picker_disabled.xml
+++ b/app/src/main/res/drawable/bg_amount_picker_disabled.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="200dp" />
 
-    <solid android:color="@color/input_light" />
+    <solid android:color="@color/input_disabled" />
 
 </shape>
