--- a/app/src/main/res/drawable/selector_left_button_room_type_background.xml
+++ b/app/src/main/res/drawable/selector_left_button_room_type_background.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/bg_room_type_left_button_selected" android:state_selected="true" />
+    <item android:drawable="@drawable/bg_room_type_left_button_selected" android:state_selected="true" android:state_enabled="true" />
+    <item android:drawable="@drawable/bg_room_type_left_button_selected_disabled" android:state_selected="true" android:state_enabled="false" />
+    <item android:drawable="@drawable/bg_room_type_left_button_default_disabled" android:state_selected="false" android:state_enabled="false" />
     <item android:drawable="@drawable/bg_room_type_left_button_default" />
 </selector>
