--- a/app/src/main/res/layout/view_holder_manager.xml
+++ b/app/src/main/res/layout/view_holder_manager.xml
@@ -74,7 +74,7 @@
                 android:layout_marginBottom="8dp"
                 android:lines="2"
                 android:ellipsize="end"
-                tools:text="Fridge description fridge description fridge description fridge description fridge description fridge description fridge description fridge description fridge description fridge description fridge description fridge description" />
+                tools:text="Manager description Manager description Manager description Manager description Manager description Manager description Manager description Manager description Manager description Manager description Manager description Manager description" />
 
         </LinearLayout>
 
