--- a/app/src/main/res/layout/view_holder_room.xml
+++ b/app/src/main/res/layout/view_holder_room.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.flaringapp.coursework2021.presentation.utils.betterlinearlayout.BetterLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -84,7 +84,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:bll_children_spacing="8dp">
+        app:bll_children_spacing="8dp"
+        android:layout_marginTop="8dp">
 
         <FrameLayout
             android:layout_width="0dp"
@@ -129,7 +130,8 @@
         android:id="@+id/layoutWorkplacesAndWindows"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:bll_children_spacing="8dp">
+        app:bll_children_spacing="8dp"
+        android:layout_marginTop="8dp">
 
         <TextView
             style="@style/Text.WithIcon"
@@ -156,32 +158,45 @@
 
     </com.flaringapp.coursework2021.presentation.utils.betterlinearlayout.BetterLinearLayout>
 
-    <LinearLayout
+    <com.flaringapp.coursework2021.presentation.utils.betterlinearlayout.BetterLinearLayout
+        android:id="@+id/layoutPriceAndArea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        app:bll_children_spacing="8dp"
+        android:layout_marginTop="8dp">
+
+        <TextView
+            style="@style/Text.WithIcon"
+            android:id="@+id/textPrice"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:drawableStartCompat="@drawable/ic_payment"
+            tools:text="$ 300.00" />
 
         <TextView
             style="@style/Text.WithIcon"
             android:id="@+id/textArea"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:drawableStartCompat="@drawable/ic_area"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:drawableEndCompat="@drawable/ic_area"
             tools:text="412.34 m2" />
 
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+    </com.flaringapp.coursework2021.presentation.utils.betterlinearlayout.BetterLinearLayout>
 
-        <TextView
-            style="@style/Text.Small"
-            android:id="@+id/textRoomType"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_primary_dark"
-            tools:text="Private room" />
+    <TextView
+        style="@style/Text.Small"
+        android:id="@+id/textRoomType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:textColor="@color/color_primary_dark"
+        tools:text="Private room" />
 
-    </LinearLayout>
-
-</com.flaringapp.coursework2021.presentation.utils.betterlinearlayout.BetterLinearLayout>
+</LinearLayout>
